style: override logo URL inside dark mode theme selector to prevent placeholder showing

--- a/project-settings-app/src/styles.scss
+++ b/project-settings-app/src/styles.scss
@@ -10,6 +10,10 @@
   --element-brand-logo-text: "Siemens";
 }
 
+:root.app--dark, :root.theme-element.app--dark {
+  --element-brand-logo: url("https://upload.wikimedia.org/wikipedia/commons/5/5f/Siemens-logo.svg");
+}
+
 :root.app--dark .header-logo, :root.theme-element.app--dark .header-logo {
   filter: brightness(0) invert(1);
 }
